--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,9 +1,9 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/alcbwlsg/r513a" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/alcbwlsg/i11n" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/alcbwlsg/n12x" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/alcbwlsg/u8y" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/alcbwlsg/m4e" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/alcbwlsg/h12s" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/alcbwlsg/z3j" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/alcbwlsg/e10d" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/alcbwlsg/f9s" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/alcbwlsg/u7g" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/alcbwlsg/b5k" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/wswsc/k513p" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/wswsc/l11o" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/wswsc/d12i" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/wswsc/e8m" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/wswsc/a4u" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/wswsc/p12w" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/wswsc/f3d" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/wswsc/p10a" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/wswsc/l9b" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/wswsc/n7z" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/wswsc/w5s" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244653.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2019/08/GettyImages-1052866522-600x400-320x200.jpg"><p align="center">美国制裁新疆公安厅和四名高官 冻结财产</p></a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244653.md#1" title="美国制裁新疆公安厅和四名高官 冻结财产""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/08/GettyImages-1052866522-600x400-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243734.md#1" title="韩国首尔市长朴元淳失踪 警方发现遗体""><img width="73" src="https://i.epochtimes.com/assets/uploads/2010/01/1001101813452016-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244402.md#1" title="美国拟放大招 打击使用五中企产品的公司""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/02/56f88ebe10e5a89434e6249b7faebf02-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241166.md#1" title="【内幕】文件泄中共防疫 严控国民回国""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-1198181431-600x400-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243734.md#1" title="韩国首尔市长朴元淳失踪 警方发现遗体""><img width="73" src="https://i.epochtimes.com/assets/uploads/2010/01/1001101813452016-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242776.md#1" title="【最新疫情7.9】再添42病例 香港重施限制""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/AAA-2-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243611.md#1" title="709大抓捕5周年 蓬佩奥：这波打压在持续""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/000_1UU14Q-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242848.md#1" title="沈舟：FBI局长揭示中共的全面冷战渗透""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/a3-1@1200x1200-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242297.md#1" title="前加司法部长：中共重判孙茜 将无辜定有罪""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/1212100115352052-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/4/13/n12028379.md#1" title="【思想领袖】布拉特：中共改秩序 扬言打台湾""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/download-94-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://oqudue369.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244341.md#1">“天天涨” 6月大陆猪肉价格同比涨81.6%</a><br>
-:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244421.md#1">欧盟要求中共立即释放维权律师和人士</a><br>
-:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244581.md#1">【直播】白宫媒体简报会：单日确诊超6万</a><br>
-:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244528.md#1">美国务院禁陈全国三名高官及家人进入美国</a><br>
-:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244637.md#1">【有冇搞错】“港版防火墙”迟早出现</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244653.md#1">美国制裁新疆公安厅和四名高官 冻结财产</a><br>
+:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243046.md#1">【名家专栏】美国恢复就业之路痛苦漫长</a><br>
+:clock8: <em>46分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244638.md#1">山西警方速结投毒杀人案 “凶手”申冤15年</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244341.md#1">“天天涨” 6月大陆猪肉价格同比涨81.6%</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244421.md#1">欧盟要求中共立即释放维权律师和人士</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244581.md#1">【直播】白宫媒体简报会：单日确诊超6万</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244528.md#1">美国务院禁陈全国等三名高官及家人进入美国</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239553.md#1">贵州大巴21死 传司机是退伍军人、拆迁户</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240842.md#1">上海暴雨“中国第一高楼”多层楼漏水严重</a><br>
@@ -27,21 +27,21 @@
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239406.md#1">美官员欲访台 中共会做什么？FBI揭秘</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240201.md#1">湖北水库滑动变形 近2.9万民众急撤</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240429.md#1">【翻墙必看】中共在美国“猎狐”真相曝光</a><br>
-<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12237466.md#1">美肯塔基海关查获46磅来自中国的迷奸药</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242067.md#1">澳留学生亮相反共后 遭死亡威胁</a><br>
+<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240462.md#1">四省洪水告急 江西已有近40万人受灾</a><br>
 <br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
+<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242506.md#1">谢燕益谈中共惧怕709律师的真实原因</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242209.md#1">【一线采访】降雨量破历史极值 江西灾情严重</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241760.md#1">中芯国际股价暴涨暴跌 中共撒钱难掩窘境</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241863.md#1">【一线采访】贵州铜仁山体滑坡 村庄被埋</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/4/n12232591.md#1">【独家】内部文件曝中共脸书账号的秘密</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239799.md#1">FBI：每10小时启动一起中共相关反间谍案</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240249.md#1">反制国安法 美权衡美元港币脱钩和制裁汇丰</a><br>
-<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12240007.md#1">杨威：评《纽约时报》两篇奇怪的文章</a><br>
 <br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
-!共 359,584,814 人
+!共 359,584,815 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -57,6 +57,7 @@
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243374.md#1">《被消失的香港》 港漫画家：用铅笔参与抗争</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242979.md#1">【翻墙必看】美制裁中共有两个核弹级选项</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243659.md#1">内斗清洗不断 中共政法委再次“清理门户”</a><br>
+<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244638.md#1">山西警方速结投毒杀人案 “凶手”申冤15年</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244581.md#1">【直播】白宫媒体简报会：单日确诊超6万</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243809.md#1">709律师呼吁大陆民众 克服恐惧 表达诉求</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241991.md#1">起诉江泽民 法轮功学员占庆荣被枉刑3年</a><br>
@@ -104,9 +105,8 @@
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/5/n12233907.md#1">湖北11县市红色预警 防汛应急升至3级</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/3/n12230577.md#1">11年冤狱 法轮功学员马智武再遭非法批捕</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/5/n12233623.md#1">美国巨星麦可杰克森转生到湖北工地？</a><br>
-<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/5/n12233532.md#1">【新闻第一现场】52国与中港有引渡条约 入境可送中</a><br>
 <br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/www/raw/master/v/2018-11-4/SY-Classical-Chinese-Dance-Technique-Collection-2018.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-11-12/zf-dsp-1128.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-1/st5-29.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/tzrs.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/er3n_3VVJ.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/XmL0_0XDL2p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/rs/NG8l.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/wt6Y_vPhM.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/vG2w_fwq.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O2jN_uD.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/C1WZ_mj.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/JZ5e_5Vusp.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/lyp/0iY.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/m1/raw/master/mjjy.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/c4rB_QQbr.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O23c_E.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqudue369/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqudue369/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqudue369/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqudue369/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqudue369/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqudue369/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqudue369/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244206.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244206.md#1">709事件五周年 陆委会呼吁：释放维权人士</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244335.md#1">公务员职位疑遭顶包 女子柔道亚军求助无门</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243709.md#1">上海连锁酒店被断水电 黑保安封门阻营业</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243597.md#1">王全璋律师展开维权行动 向法院递交控告状</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243124.md#1">田云：709大抓捕5周年 世界应制止中共行恶</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242955.md#1">709大抓捕五周年 各界关注港版国安法</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244341.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1220292569-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244341.md#1">“天天涨” 6月大陆猪肉价格同比涨81.6%</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243581.md#1">忧资金进入？大陆多地升级对楼市调控</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243607.md#1">美联航和美航再次暂停飞往香港的航班</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243066.md#1">陆养猪企业招聘2.5万大学生 安排在一线猪场</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242706.md#1">北京写字楼空置率创近十年新高</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242099.md#1">惩罚中共瞒疫 川普：禁TikTok是选择之一</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244528.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-863067852-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244528.md#1">美国务院禁陈全国三名高官及家人进入美国</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244085.md#1">紧随澳洲回应国安法 新西兰将重审与香港关系</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244260.md#1">五眼国家商讨香港问题 澳新重审与港关系</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243994.md#1">受贿1.07亿 海口市委前书记张琦受审</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/2/n12227709.md#1">美国加速与中俄的太空军事竞赛</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242549.md#1">不满ICE新规 纽约高校表态帮助国际学生</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243750.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/4-4-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243750.md#1">【视频】武夷山暴雨洪灾 景区关闭 全市停水</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242969.md#1">广汉花炮厂爆炸6人受伤 7100余人被疏散</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241562.md#1">廖远：大禹治水与三峡工程防洪失败</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241977.md#1">【重播】白宫简报会：学校必须开放 如何进行</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242486.md#1">蓬佩奥：病毒大流行让全球看清中共真面目</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240453.md#1">【疫情中的纽约人】有争议的抗病毒配方</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243412.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/12-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243412.md#1">大学教授曝丑闻 北京律协副会长疑有多个情妇</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243214.md#1">广州多家华为手机店诱骗顾客预存电话费后“倒闭”</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241847.md#1">河北一公司老板融资被重判 15亿资产遭抢占</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240267.md#1">每日三退声明精选（2020/07/07）</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236618.md#1">组图：街头为家 北京疫情下的艰难民生</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236965.md#1">女子偷新生儿判1年10月 网友：鼓励犯罪</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239849.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/Unknown-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239849.md#1">组图：高考前夕 学校孔子牛顿像前堆满供品</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239233.md#1">美开学新政策 37万中国留学生忧心忡忡</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12237952.md#1">【视频】高考首日 安徽歙县因洪涝取消两科考试</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12235290.md#1">大陆高考7日登场 疫情以来最大规模集体活动</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/2/n12228726.md#1">耍赖拒付韩国版权费 大陆综艺节目被强制赔偿</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/3/n12229468.md#1">山东菏泽校长之子11岁起领工资 档案涉伪造</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244206.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244206.md#1">709事件五周年 陆委会呼吁：释放维权人士</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244335.md#1">公务员职位疑遭顶包 女子柔道亚军求助无门</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243709.md#1">上海连锁酒店被断水电 黑保安封门阻营业</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243597.md#1">王全璋律师展开维权行动 向法院递交控告状</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243124.md#1">田云：709大抓捕5周年 世界应制止中共行恶</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242955.md#1">709大抓捕五周年 各界关注港版国安法</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244341.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1220292569-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244341.md#1">“天天涨” 6月大陆猪肉价格同比涨81.6%</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243581.md#1">忧资金进入？大陆多地升级对楼市调控</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243607.md#1">美联航和美航再次暂停飞往香港的航班</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243066.md#1">陆养猪企业招聘2.5万大学生 安排在一线猪场</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242706.md#1">北京写字楼空置率创近十年新高</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242099.md#1">惩罚中共瞒疫 川普：禁TikTok是选择之一</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244528.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-863067852-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244528.md#1">美国务院禁陈全国等三名高官及家人进入美国</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244085.md#1">紧随澳洲回应国安法 新西兰将重审与香港关系</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12244260.md#1">五眼国家商讨香港问题 澳新重审与港关系</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243994.md#1">受贿1.07亿 海口市委前书记张琦受审</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/2/n12227709.md#1">美国加速与中俄的太空军事竞赛</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242549.md#1">不满ICE新规 纽约高校表态帮助国际学生</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243750.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/4-4-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243750.md#1">【视频】武夷山暴雨洪灾 景区关闭 全市停水</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242969.md#1">广汉花炮厂爆炸6人受伤 7100余人被疏散</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241562.md#1">廖远：大禹治水与三峡工程防洪失败</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241977.md#1">【重播】白宫简报会：学校必须开放 如何进行</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242486.md#1">蓬佩奥：病毒大流行让全球看清中共真面目</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240453.md#1">【疫情中的纽约人】有争议的抗病毒配方</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243412.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/12-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243412.md#1">大学教授曝丑闻 北京律协副会长疑有多个情妇</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243214.md#1">广州多家华为手机店诱骗顾客预存电话费后“倒闭”</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241847.md#1">河北一公司老板融资被重判 15亿资产遭抢占</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240267.md#1">每日三退声明精选（2020/07/07）</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236618.md#1">组图：街头为家 北京疫情下的艰难民生</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236965.md#1">女子偷新生儿判1年10月 网友：鼓励犯罪</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239849.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/Unknown-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239849.md#1">组图：高考前夕 学校孔子牛顿像前堆满供品</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239233.md#1">美开学新政策 37万中国留学生忧心忡忡</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12237952.md#1">【视频】高考首日 安徽歙县因洪涝取消两科考试</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12235290.md#1">大陆高考7日登场 疫情以来最大规模集体活动</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/2/n12228726.md#1">耍赖拒付韩国版权费 大陆综艺节目被强制赔偿</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/3/n12229468.md#1">山东菏泽校长之子11岁起领工资 档案涉伪造</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/6/5/n12165121.md#1">【独家】北京卫戍区民兵花名册透露秘密</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/2/n12226681.md#1">监控民众不力 河北两商场遭中共内部通报</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/2/n12225939.md#1">【内幕】川习较劲 李克强率先对美释求和信号</a><br>
